tests/ui/stubbing/missing-stubbing-flag/stub_missing_flag.expected
error: Using the stub attribute requires activating the unstable `stubbing` feature\
stub_missing_flag\
|\
| #[kani::stub(some_function, replacement_function)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error